# Proiect-SM

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  ds18b20.c  ds18b20.h  font5x8.h  http_server.c  http_server.h  lwipopts.h  main.c  ssd1306.c  ssd1306.h  wifi_server.c  wifi_server.h
